syntax = "proto3";
package sec01;

option java_package = "me.kcj.models.sec01";

message Person {
  string name = 1;
  int32 age = 2;
}