syntax = "proto3";
package sec05.v6;
option java_multiple_files = true;
option java_package = "me.kcj.models.sec06";


import "google/protobuf/empty.proto";

message BalanceCheckRequest{
  int32 account_number = 1;
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}


message AllAccountsResponse{
  repeated AccountBalance accounts = 1;
}


message WithdrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount = 1;
}

message DepositRequest{
  oneof request{
    int32 accountNumber = 1;
    Money money = 2;
  }
}

service BankService {
  //unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AllAccountsResponse);

  //server streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);

  rpc Deposit(stream DepositRequest) returns (AccountBalance);
}
